--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.4.1 M
 
+2016-10-11 Will
+* Ringbuffer size corrections.
+* Docs punctuation corrections.
+* Started to implement direct access -> gui updates.
+
 2016-10-9 Will
 * Gave direct access CLI & GUI independent 'from' ring buffers.
 * Improved direct access data transfers.
