--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,13 @@
 yoshimi 1.4.1 M
 
+2016-10-24 Will
+* Implemented mising direat modulator 440Hz switch.
+* Completed direct -> gui addsynthvoice.
+* Updated docs.
+
 2016-10-23 Will
-* Bugfix: direct -> gui 440Hz wasn't corerect for sub/pad.
-* direct -> gui addsynthvoice done appart from modulators.
+* Bugfix: direct -> gui 440Hz wasn't correct for sub/pad.
+* direct -> gui addsynthvoice done apart from modulators.
 
 2016-10-22 Will
 * Added Loop mode to Solo feature.
