Started separating out CLI replies from main direct entries

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.4.1 M
 
+2016-10-26 Will
+* Started separating out CLI replies from main direct entries.
+
 2016-10-24 Will
 * Implemented mising direat modulator 440Hz switch.
 * Completed direct -> gui addsynthvoice.
