--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.4.1 M
 
 2016-10-26 Will
 * Started separating out CLI replies from main direct entries.
+* Completed separation up to voice level.
 
 2016-10-24 Will
 * Implemented mising direat modulator 440Hz switch.
