direct -> gui oscllator done Bugfixes: some oscillator direct access errors updated docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.4.1 M
 
+2016-11-4 Will
+* direct -> gui oscllator done.
+* Bugfixes: some oscillator direct access errors :(
+* updated docs.
+
 2016-11-1 Will
 * Cmake fix: nucurses now compulsory, but ncursesw optional.
 
