Direct -> gui part kits done Direct -> gui part system sends done Direct -> gui resonance graph done Corrected errors in docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.4.1 M
 
+2016-11-5 Will
+* Direct -> gui part kits done.
+* Direct -> gui part system sends done.
+* Direct -> gui resonance graph done.
+* corrected errors in docs.
+
 2016-11-4 Will
 * Direct -> gui oscllator done.
 * Bugfixes: some oscillator direct access errors :(
