--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.1 M
 
+2016-11-7 Will
+* Improved crossfade dynamics.
+* More docs.
+
 2016-11-6 Will
 * Enhanced part onoff control for internal routines.
     0 = off
