--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.4.1 M
 2016-11-7 Will
 * Improved crossfade dynamics.
 * More docs.
+* Added 'CrossFade.xiz' instrument to 'examples' files.
+  Included 'CrossFade.txt' description.
 
 2016-11-6 Will
 * Enhanced part onoff control for internal routines.
