Re-instated 'in place' for jack frewheeling

--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.4.1 M
 * Finalised CMake ncurses correction from Giovanni.
 * Add more explanatory detail to earliar changes made to
   Bank/Program change in MusicIO.cpp
+* Re-instated 'in place' for jack frewheeling. Wasn't in use
+  when program load issue arose :(
 
 2016-11-7 Will
 * Improved crossfade dynamics.
