--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.1 M
 
+2016-11-19 Will
+* Made a few corrections and extensions to midi learn.
+* Started documenting this.
+
 2016-11-18 Will
 * Started midi learn. Basic entries in place - not active.
   LV2 behaviour not tested yet.
