More midi learn refinements Tested limits & status (but no interface yet) Created potential GUI based on part kits

--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,9 @@ yoshimi 1.4.1 M
 * Made a few corrections and extensions to midi learn.
 * Started documenting this.
 * Bugfix: reverted change that had killed midi learn :(
+* More midi learn refinements.
+  Tested limits & status (but no interface yet).
+* Created potential GUI based on part kits.
 
 2016-11-18 Will
 * Started midi learn. Basic entries in place - not active.
