--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.4.1 M
 
 2016-11-20 Will
 * Midi learn window now accessible but non-functional.
+* Midi learn Gui now has some internal test structure.
+* Updated docs.
 
 2016-11-19 Will
 * Made a few corrections and extensions to midi learn.
