--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,12 @@
 yoshimi 1.4.1 M
 
 2016-11-21 Will
-* partially set up routing for midi learn messages.
+* Partially set up routing for midi learn messages.
 * BugFix: Wrong ID for kits allowed part messages to drop
   through causing a segfault.
+* Some optimisations in Interchange.cpp
+* Filters and envelopes can now be midi-learned but envelopes
+  don't update the GUI.
 
 2016-11-20 Will
 * Midi learn window now accessible but non-functional.
