Bugfix: Direct access had been blocked to kit mode engines

--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.4.1 M
 * Enabled all midi-learn editors except CC and channel.
 * All midi-learn editors now working :)
 * Bugfix: Odd control combinations segfaulted - cured.
+* Bugfix: Curing old bug in direct access that segaulted on
+  invalid kit access stopped all access to kits. Now done.
 
 2016-11-23 Will
 * Adding new learned lines now fully updates to the Gui.
