--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.1 M
 
+2016-11-26 Will
+* Implemented the 'delete' function in midi-learn.
+* More doc updates!
+
 2016-11-24 Will
 * Enabled all midi-learn editors except CC and channel.
 * All midi-learn editors now working :)
