Direct access global fine detune now goes through ring buffer

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.4.1 M
 
 2016-11-26 Will
 * Small midi-learn / Interchange optimisations.
+* Direct access global fine detune now goes through ring buffer
+  to stop Xruns - particulalrly with midi-learn.
 
 2016-11-26 Will
 * Implemented the 'delete' function in midi-learn.
