Enabled midi-learn of part effect sends BugFix: reinstated direct control of effects Enabled midi-learn of effects

--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -2,6 +2,7 @@
 Idea!
 set up map for min,max, type, default for all controls. Map filled by associated code sections as they are initialised.
 
+Send global and part keyshifts through ring buffer (like global fine detune).
 
 LV2: internal sound banks do not appear to be exposed as LV2 presets
 
