--- a/Changelog
+++ b/Changelog
@@ -2,10 +2,13 @@ yoshimi 1.4.1 M
 
 2016-11-26 Will
 * Small midi-learn / Interchange optimisations.
-* Direct access global fine detune now goes through ring buffer
-  to stop Xruns - particulalrly with midi-learn.
+* Direct access global fine detune now goes through ring buffe  to stop Xruns - particulalrly with midi-learn.
+* Enabled midi-learn of part effect sends.
+* BugFix: reinstated direct control of effects.
+  GUI not updated :(
+* Enabled midi-learn of effects.
 
-2016-11-26 Will
+2016-11-25 Will
 * Implemented the 'delete' function in midi-learn.
 * More doc updates!
 
