midi-learn menu changed to buttons midi-learn clear all implemented

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.1 M
 
+2016-11-27 Will
+* midi-learn menu changed to buttons.
+* midi-learn clear all implemented.
+
 2016-11-26 Will
 * Small midi-learn / Interchange optimisations.
 * Direct access global fine detune now goes through ring buffer
