Started defining a standardised limits routine Bugfix: LV2 was trapping unknown CCs instead of allowing them to be passed on to midi-learn

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.4.1 M
 
+2016-12-2 Will
+* Started defining a standardised limits routine.
+  This will return min, max, default for any control.
+* Bugfix: LV2 was trapping unknown CCs instead of allowing
+  them to be passed on to midi-learn!
+
 2016-12-2 Merge from : Jörn
 * Extensive tooltip upgrade dynamically giving real values.
 * Some code style consistency adjustments.
