Added load/save messages to midi-learn

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.4.1 M
 2016-12-10 Will
 * Bugfix: CLI was trapping the wrong midi-learn control.
 * CLI now change midi-learn mute, limit, block switches.
+* Added load/save messages to midi-learn.
 
 2016-12-9 Will
 * Bugfix: CLI load midi-learn from list had missing return.
