--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,9 @@
-yoshimi 1.4.1 M
+yoshimi 1.5.0 rc1
 
 2016-12-11 Will
 * Implemented message window for midi learning.
+* Corrected GUI access to midi-learn general opps.
+* Set version to 1.5.0 rc1
 
 2016-12-10 Will
 * Bugfix: CLI was trapping the wrong midi-learn control.
