--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.0 rc1
 
+2016-12-12 Will
+* Doc updates.
+
 2016-12-11 Will
 * Implemented message window for midi learning.
 * Corrected GUI access to midi-learn general opps.
