Listed Jörn's latest tooltips in Changelog

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,14 @@
 yoshimi 1.5.0 rc1
 
+2016-12-5 Jörn
+* More tooltips updates.
+  Distortion
+  Phaser
+  Chorus
+  Reverb
+  Echo
+  System sends
+
 2016-12-12 Will
 * Doc updates.
 
