--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 1.5.0 rc3
+yoshimi 1.5.0 rc5
+
+2016-12-16
+* Changed Midi learn spinboxes to number entries.
+* Adjusted Midi learn window dimensions.
+* Corrected tooltips, spellings and acromyms.
+* Set version to 1.5.0 rc5
 
 2016-12-15 Will
 * Changed virtual keyboard key map labels and tooltips.
