--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.0
 
+2016-12-30 Will
+* Improved layout of Filters GUI insert.
+
 2016-12-27 Will
 * doc updates and corrections.
 * set version to 1.5.0 M - no code changes.
