--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.0
 
+2017-1-2 Will
+* Enabled MIDI learning of pitchwheel.
+  Comes in as CC 640 but seen as 128.
+* Optimised Midi learn editing to reduce line moves.
+
 2016-12-30 Will
 * Improved layout of Filters GUI insert.
 
