--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 1.5.0
+yoshimi 1.5.0 M
+
+2017-1-3 Will
+* Added part number to invalid kititem  warning.
+* Midi now recognises channel aftertouch.
+* Prep for NRPN Midi learn.
+* LFO titles no longer overlap C/P.
 
 2017-1-2 Will
 * Enabled MIDI learning of pitchwheel.
@@ -11,6 +17,8 @@ yoshimi 1.5.0
 2016-12-27 Will
 * doc updates and corrections.
 * set version to 1.5.0 M - no code changes.
+
+yoshimi 1.5.0
 
 2016-12-17 Will
 * Added warning for undefined kits in Midi learn.
