--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.0 M
 
+2017-1-11 Will
+* Improved GUI part label and colours sync.
+
 2017-1-10 Will
 * Improved GUI part/mixer synchronisation.
 * Added error check for out of range part numbers.
