--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.0 M
 
+2017-1-13 Will
+* First experiment unifying alsa/jack/lv2 Midi input.
+
 2017-1-12 Will
 * Improved reliability of window positioning.
 * Midi learn window now remembered.
